grammar.js
    source_file: $ => seq(
      repeat($._newline),
      optional(sep1(repeat1($._newline), $._item)),
    ),

    _item: $ => choice(
      $.import,
      $.export,
      $.definition,
      $.type_definition,
      $.ability_definition,
      $.ability_impl,
      $.comptime,
      $.assignment,
      $._expression,
    ),

    // ---------------------------------------------------------------- imports
    import: $ => seq(
      'import',
      $.module_path,
      optional(seq(',', commaSep1($._import_item))),
    ),

    module_path: $ => sep1('.', choice($.type_identifier, $.identifier)),

    _import_item: $ => choice($.identifier, $.type_identifier, $.operator_reference),

    export: $ => seq('export', commaSep1($._import_item)),

    // ------------------------------------------------------------ definitions
    definition: $ => seq(
      optional('implicit'),
      choice(
        // function definition: name param+ (: type)? = body
        seq(
          field('name', $._definition_name),
          field('parameters', repeat1($._parameter)),
          optional(seq(':', field('return_type', $._type))),
          '=',
          field('body', $._block_or_expression),
        ),
        // operator or method definition with no parameters, e.g. `(.*) = deref`.
        seq(
          field('name', choice($.operator_reference, $.method_name)),
          optional(seq(':', field('return_type', $._type))),
          '=',
          field('body', $._block_or_expression),
        ),
        // value binding: an irrefutable target = body. Refutable constructor
        // destructuring belongs in `match`, so it is excluded here (that keeps
        // `Foo a b` at statement start unambiguously a call, not a binding LHS).
        seq(
          optional('var'),
          field('name', $._binding_pattern),
          optional(seq(':', field('type', $._type))),
          '=',
          field('body', $._block_or_expression),
        ),
      ),
    ),

    _definition_name: $ => choice(
      $.identifier,
      $.operator_reference,
      $.method_name,
    ),

    // Irrefutable binding targets only. Uses dedicated tuple/alias rules built
    // from binding-safe atoms so a bare constructor application (`Foo a b`) can
    // never be read as a binding LHS (it stays a call expression).
    _binding_pattern: $ => choice(
      $._binding_atom,
      $.tuple_binding,
      $.alias_binding,
    ),

    _binding_atom: $ => choice(
      $.identifier,
      $.wildcard_pattern,
      $.unit,
      seq('(', $._pattern, ')'),
    ),

    tuple_binding: $ => prec.right(seq(
      $._binding_atom,
      repeat1(seq(',', $._binding_atom)),
    )),

    method_name: $ => seq($.type_identifier, repeat(seq('.', $.type_identifier)), '.', $.identifier),

    _parameter: $ => choice(
      $._pattern_atom,
      $.typed_parameter,
      $.implicit_parameter,
    ),

    type_definition: $ => seq(
      optional('shared'),
      optional('mut'),
      'type',
      field('name', choice($.type_identifier, $.operator_reference)),
      field('generics', repeat($._generic_parameter)),
      '=',
      field('body', $._type_body),
    ),

    _generic_parameter: $ => choice(
      $.identifier,
      $.lifetime,
      seq('(', $.identifier, ':', $._kind, ')'),
    ),

    _type_body: $ => choice(
      $.struct_body,
      $.union_body,
      $.tuple_type,
      $._type,
    ),

    // A bare tuple type on the right of a `type` alias, e.g. `type Pair a = a, a`.
    tuple_type: $ => prec.right(seq($._type, repeat1(seq(',', $._type)))),

    struct_body: $ => choice(
      // inline: field: T, field: T  (one or more)
      seq($.struct_field, repeat(seq(',', $.struct_field))),
      // indented block of fields
      $._indented_struct_body,
    ),

    _indented_struct_body: $ => seq($._indent, sep1($._newline, $.struct_field), $._dedent),

    struct_field: $ => seq(field('name', $.identifier), ':', field('type', $._type)),

    union_body: $ => choice(
      seq('|', $.union_variant, repeat(seq('|', $.union_variant))),
      seq(
        $._indent,
        seq('|', $.union_variant),
        repeat(seq($._newline, '|', $.union_variant)),
        $._dedent,
      ),
    ),

    union_variant: $ => seq(field('name', $.type_identifier), repeat($._type_atom)),

    // --------------------------------------------------- abilities and impls
    ability_definition: $ => seq(
      'ability',
      field('name', $.type_identifier),
      field('generics', repeat($._generic_parameter)),
      '=',
      field('body', choice(
        $.ability_declaration,
        seq($._indent, sep1($._newline, $.ability_declaration), $._dedent),
      )),
    ),

    ability_declaration: $ => seq(
      field('name', choice($.identifier, $.operator_reference)),
      ':',
      field('type', $._type),
    ),

    ability_impl: $ => seq(
      'impl',
      optional(seq(field('name', $.identifier), repeat($._parameter), ':')),
      field('ability', $._type),
      'with',
      field('body', choice($.block, $.definition)),
    ),

    // ------------------------------------------------------------- comptime
    block: $ => seq($._indent, sep1($._newline, $._statement), $._dedent),

    _block_or_expression: $ => choice($.block, $.assignment, $._expr_or_tuple),

    _statement: $ => choice(
      $.definition,
      $.type_definition,
      $.ability_definition,
      $.ability_impl,
      $.comptime,
      $.assignment,
      $._expr_or_tuple,
    ),

    assignment: $ => seq(
      field('target', $._expression),
      field('operator', choice(':=', '+=', '-=', '*=', '/=', '%=')),
      field('value', $._block_or_expression),
    ),

    // --------------------------------------------------------- expressions
    _expr_or_tuple: $ => choice($._expression, $.tuple),

    tuple: $ => prec.right(PREC.comma, seq(
      $._expression,
      repeat1(seq(',', $._expression)),
    )),

    _expression: $ => choice(
      $._term,
      $.binary_expression,
      $.is_expression,
      $.if_expression,
      $.match_expression,
      $.while_expression,
      $.for_expression,
      $.loop_expression,
      $.handler_expression,
      $.lambda,
      $.named_constructor,
      $.do_expression,
      $.trailing_do_call,
      $.return_expression,
      $.break_expression,
      $.continue_expression,
    ),

    call: $ => prec.left(PREC.apply, seq(
      field('function', $._postfix_expression),
      field('arguments', repeat1($._argument)),
    )),

    _argument: $ => choice(
      $._postfix_expression,
      $.implicit_argument,
      $.lambda,
    ),

    implicit_argument: $ => seq('{', $._expression, '}'),

    _postfix_expression: $ => choice(
      $.member_access,
      $.index_expression,
      $.deref_expression,
      $._atom,
    ),

    member_access: $ => prec.left(PREC.member, seq(
      field('object', $._postfix_expression),
      '.',
      field('member', choice($.identifier, $.type_identifier, $.integer, $.operator_reference)),
    )),

    binary_expression: $ => {
      const table = [
        [PREC.as, 'as', 'left'],
        [PREC.multiply, choice('*', '/', '%'), 'left'],
        [PREC.add, choice('+', '-'), 'left'],
        [PREC.range, '..', 'left'],
        [PREC.append, '++', 'left'],
        [PREC.compare, choice('==', '!=', '<', '>', '<=', '>=', '%%'), 'left'],
        [PREC.and, 'and', 'left'],
        [PREC.or, 'or', 'left'],
        [PREC.apply_right, choice('|>', '~>'), 'left'],
        [PREC.apply_left, '<|', 'right'],
        [PREC.semicolon, ';', 'left'],
      ];
      return choice(...table.map(([precedence, operator, assoc]) => {
        const rule = seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        );
        return assoc === 'left'
          ? prec.left(precedence, rule)
          : prec.right(precedence, rule);
      }));
    },

    // `is` takes a pattern on its right-hand side.
    if_expression: $ => seq(
      'if',
      field('condition', $._expr_or_tuple),
      optional($._newline),
      'then',
      field('consequence', $._block_or_expression),
      optional(seq(
        optional($._newline),
        'else',
        field('alternative', $._block_or_expression),
      )),
    ),

    match_expression: $ => seq(
      'match',
      field('subject', $._expr_or_tuple),
      optional($._indent),
      repeat1($.match_arm),
      optional($._dedent),
    ),

    match_arm: $ => seq(
      optional($._newline),
      '|',
      field('pattern', $._pattern),
      '->',
      field('body', $._block_or_expression),
    ),

    while_expression: $ => seq(
      'while',
      field('condition', $._block_or_expression),
      'do',
      field('body', $._block_or_expression),
    ),

    for_expression: $ => seq(
      'for',
      field('pattern', $._pattern),
      'in',
      field('iterable', $._expression),
      'do',
      field('body', $._block_or_expression),
    ),

    loop_expression: $ => seq(
      'loop',
      field('arguments', repeat($._loop_argument)),
      '->',
      field('body', $._block_or_expression),
    ),

    _loop_argument: $ => choice(
      $.identifier,
      $.unit,
      seq('(', $._pattern, '=', $._expression, ')'),
    ),

    handler_expression: $ => seq(
      'handler',
      field('name', $.identifier),
      'for',
      optional($._indent),
      $.handler_arm,
      repeat($.handler_arm),
      optional($._dedent),
      optional(seq(
        optional($._newline),
        'in',
        field('body', $._block_or_expression),
      )),
    ),

    handler_arm: $ => seq(
      optional($._newline),
      optional('|'),
      field('operation', $.identifier),
      field('parameters', repeat($._pattern_atom)),
      '->',
      field('body', $._block_or_expression),
    ),

    lambda: $ => prec.right(seq(
      optional('move'),
      'fn',
      field('parameters', repeat($._parameter)),
      optional(seq(':', field('return_type', $._type))),
      choice('->', '=>'),
      field('body', $._block_or_expression),
    )),

    // `prec.dynamic` biases GLR toward keeping every `T with ...` field inside
    // the constructor rather than letting the tuple operator (`,`) split the
    // field list — Ante's ban-comma rule for constructor fields.
    named_constructor: $ => prec.dynamic(1, seq(
      field('type', choice($.type_identifier, $.constructor_path, $.method_name)),
      'with',
      field('fields', choice(
        commaSep1($.constructor_field),
        seq($._indent, sep1($._newline, $.constructor_field), $._dedent),
      )),
    )),

    constructor_field: $ => seq(
      field('name', $.identifier),
      optional(seq(
        repeat($._parameter),
        '=',
        field('value', choice($.block, $._expression)),
      )),
    ),

    // -------------------------------------------------------------- atoms
    placeholder: $ => '_',

    parenthesized_expression: $ => seq('(', $._expr_or_tuple, ')'),

    array: $ => seq('[', optional(commaSep1($._expression)), optional(','), ']'),

    operator_reference: $ => seq('(', choice(
      'and', 'or', 'not', 'in', 'is', 'as',
      '==', '!=', '<', '>', '<=', '>=',
      '<|', '|>', '~>', '++', '..', '%%',
      '*', '/', '%', '+', '-',
      '.[]', '.[]:=', '.*',
      ',',
    ), ')'),

    extern: $ => prec.right(seq('extern', optional(choice($.string, $.identifier)))),

    // -------------------------------------------------------------- types
    _type: $ => choice(
      $._type_atom,
      $.type_application,
      $.function_type,
      $.reference_type,
      $.forall_type,
    ),

    _type_atom: $ => choice(
      $.type_identifier,
      $.constructor_path,
      $.identifier,
      $.primitive_type,
      $.integer,
      $.lifetime,
      $.type_hole,
      $.parenthesized_type,
    ),

    type_application: $ => prec.left(seq(
      field('constructor', $._type_atom),
      repeat1($._type_atom),
    )),

    function_type: $ => prec.right(seq(
      optional('resume'),
      'fn',
      repeat($._type_atom),
      optional($.closure_environment),
      repeat($._effect_set),
      choice('->', '=>'),
      $._type,
    )),

    // Explicit closure environment, e.g. `fn A [env] -> B`.
    _effect_set: $ => seq('{', commaSep($._type), '}'),

    reference_type: $ => prec.right(seq(
      choice('ref', 'mut', 'imm', 'uniq', 'owned', 'shared'),
      optional($.lifetime),
      $._type,
    )),

    parenthesized_type: $ => seq(
      '(',
      optional(seq($._type, repeat(seq(',', $._type)), optional(','))),
      ')',
    ),

    // ------------------------------------------------------------ patterns
    _pattern: $ => choice(
      $._pattern_atom,
      $.constructor_pattern,
      $.tuple_pattern,
      $.or_pattern,
      $.alias_pattern,
      $.typed_pattern,
    ),

    _pattern_atom: $ => choice(
      $.identifier,
      $.type_identifier,
      $.constructor_path,
      $._literal,
      $.unit,
      $.wildcard_pattern,
      $.operator_reference,
      seq('(', $._pattern, ')'),
    ),

    // A qualified constructor, e.g. `Maybe.Some` or `Std.C.String`.
    constructor_path: $ => prec.left(seq(
      $.type_identifier,
      repeat1(seq('.', $.type_identifier)),
    )),

    wildcard_pattern: $ => '_',

    constructor_pattern: $ => prec.left(PREC.apply, seq(
      field('constructor', choice($.type_identifier, $.constructor_path, $.method_name)),
      repeat1($._pattern_atom),
    )),

    tuple_pattern: $ => prec.right(PREC.comma, seq(
      $._pattern,
      repeat1(seq(',', $._pattern)),
    )),

    or_pattern: $ => prec.left(seq(
      $._pattern,
      repeat1(seq(optional($._newline), '|', $._pattern)),
    )),

    alias_pattern: $ => prec(PREC.member, seq(
      field('binder', $.identifier),
      '@',
      field('pattern', $._pattern),
    )),

    typed_pattern: $ => prec(PREC.annotation, seq(
      $._pattern,
      ':',
      $._type,
    )),

    // -------------------------------------------------------------- literals
    integer: $ => token(seq(
      /[0-9][0-9_]*/,
      optional(/(i8|i16|i32|i64|isz|u8|u16|u32|u64|usz)/),
    )),

    float: $ => token(seq(
      /[0-9][0-9_]*/,
      '.',
      /[0-9][0-9_]*/,
      optional(/(f|f32|f64)/),
    )),

    boolean: $ => choice('true', 'false'),

    unit: $ => seq('(', ')'),

    char: $ => token(seq(
      "'",
      choice(/[^'\\\n]/, seq('\\', /./)),
      "'",
    )),

    string: $ => seq(
      '"',
      repeat(choice(
        $._string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    _string_content: $ => token.immediate(prec(1, /[^"\\$]+/)),

    interpolation: $ => seq('${', $._expression, '}'),

    identifier: $ => /[a-z_][a-zA-Z0-9_]*/,

    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    primitive_type: $ => choice(...PRIMITIVE_TYPES),

    // -------------------------------------------------------------- comments
